--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@vitest/coverage-v8": "^0.34.4",
     "nodemon": "^3.0.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
